# Matam-Homework-2

./: README.md
dry/: CMakeLists.txt  Pirate.cpp  Pirate.h  main.cpp
